# autolabeling_openvino

./: .gitignore  CMakeLists.txt  main.cpp  yolov8_cls_ov_infer.cpp  yolov8_pose_ov_infer.cpp  yolov8_seg_ov_infer.cpp
